# GPU-BENCHMARK

./: .gitignore  CMakeLists.txt  Makefile  README.md  benchmark.cu  display_results.py  results.txt  run_all_benchmarks.sh  run_benchmarks.sh
matrix_mul/: Makefile  matrix_mul  matrix_mul.cu
memory_bandwidth/: Makefile  memory_bandwidth  memory_bandwidth.cu
vector_add/: Makefile  vector_add  vector_add.cu
